VDR Plugin 'streamdev' Revision History
---------------------------------------

- fixed extremux x264 using value of ABR for VBR (thanks to vel_tins@vdrportal)

2010-07-20: Version 0.4.0b

- fixed wrong URL path in m3u playlists (reported by Norman Thiel)

2010-07-20: Version 0.4.0a

- set externremux.sh executable in distribution archive
- externremux quality value should be wlan54, not wlan45 (reported by
  wolfi.m@vdrportal)

2010-07-19: Version 0.4.0

- using SIGINT in externremux to kill mencoder works better than SIGTERM;
  especially x264 still needs a SIGKILL sometimes
- added --remove-destination to cp commands installing plugins
- updated Italian translation (thanks to Diego Pierotto)
- config option "client may suspend" hidden if not applicable
- updated and enhanced README
- added support for HTTP method HEAD
- rewrite of externremux.sh, including support for various URL parameters,
  logging and improved shutdown
- start externremux script in a separate process group
- changed HTTP URL path for externremux from EXTERN to EXT (suggested by
  Rolf Ahrenberg)
- HTTP headers now have to be emitted by externremux script
- pass channel related information and URL parameters to externremux script
  through environment
- implement CGI like interface for externremux script
- dropped "Synchronize EPG" feature. Please use epgsync-plugin instead
  (available from http://vdr.schmirler.de)
- fixed a memory leak in cStreamdevPatFilter::GetPid (thanks to lhanisch)
- length -1 is the correct value for streams in M3U playlists
- added DELT FORCE option to delete running timers (thanks to Alwin Esch)
- fixed missing virtual destructor for cTSRemux
- improved PARENTALRATING patch detection was missing in this branch
- silenced warnings concerning asprintf (requested by Rolf Ahrenberg)
- don't update recordings list on CmdPLAY (reported by BBlack)
- adapted and included xmbc patch for VDR 1.4.x
- cleaned up common.h / common.c
- dropped cStreamdevMenuSetupPage